Add types of fuzzers section

--- a/literatura.bib
+++ b/literatura.bib
@@ -8,3 +8,25 @@
   year={1990},
   publisher={ACM New York, NY, USA}
 }
+
+@book{takanen2018fuzzing,
+  title={Fuzzing for software security testing and quality assurance},
+  author={Takanen, Ari and Demott, Jared D and Miller, Charles and Kettunen, Atte},
+  year={2018},
+  publisher={Artech House}
+}
+
+@article{neystadt2008automated,
+  title={Automated penetration testing with white-box fuzzing},
+  author={Neystadt, John},
+  journal={MSDN Library},
+  year={2008}
+}
+
+@inproceedings{miller2007analysis,
+  title={Analysis of mutation and generation-based fuzzing},
+  author={Miller, Charlie and Peterson, Zachary NJ and others},
+  booktitle={Independent Security Evaluators, Tech. Rep},
+  volume={4},
+  year={2007}
+}
