--- a/literatura.bib
+++ b/literatura.bib
@@ -30,3 +30,85 @@
   volume={4},
   year={2007}
 }
+
+@misc{zalewski2018american,
+  title={american fuzzy lop (2.52 b)},
+  author={Zalewski, Michal},
+  journal={9.1]. http://lcamtuf. coredump. cx/afl},
+  year={2018},
+  howpublished={\url{https://lcamtuf.coredump.cx/afl/}}
+}
+
+@misc{zalewski2014uninitialized,
+  title={CVE-2014-1564: Uninitialized memory with truncated images in Firefox},
+  year=2014,
+  author={Zalewski, Michal},
+  howpublished={\url{https://lcamtuf.blogspot.com/2014/09/cve-2014-1564-uninitialized-memory-when.html}}
+}
+
+@misc{zalewski2014two,
+  title={Two more browser memory disclosure bugs (CVE-2014-1580 and \#19611cz)},
+  year=2014,
+  author={Zalewski, Michal},
+  howpublished={\url{https://lcamtuf.blogspot.com/2014/10/two-more-browser-memory-disclosure-bugs.html}}
+}
+
+@misc{zalewski2015uninitialized,
+  title={Uninitialized memory use during bitmap rendering},
+  year=2015,
+  author={Zalewski, Michal},
+  howpublished={\url{https://www.mozilla.org/en-US/security/advisories/mfsa2015-02/}}
+}
+
+@misc{mozzilla2015update,
+  title={Update OpenH264 plugin to version 1.3},
+  year=2015,
+  author={Mozilla and Cisco Developers, Nils, Hanno Bock},
+  howpublished={\url{https://www.mozilla.org/en-US/security/advisories/mfsa2015-10/}}
+}
+
+% TODO: correct Bock's name when we support unicode
+@misc{bock2015out,
+  title={Out of bounds read in OpenSSL function X509\_cmp\_time (CVE-2015-1789) and other minor issues},
+  year=2015,
+  author={Hanno Bock},
+  howpublished={\url{https://blog.fuzzing-project.org/15-Out-of-bounds-read-in-OpenSSL-function-X509_cmp_time-CVE-2015-1789-and-other-minor-issues.html}}
+}
+
+@misc{sharma2014gnutls,
+  title={gnutls: Heap corruption when generating key ID for ECC (GNUTLS-SA-2014-5)},
+  year=2014,
+  author={Siddharth Sharma},
+  howpublished={\url{https://bugzilla.redhat.com/show_bug.cgi?id=1161443}}
+}
+
+@misc{zalewski2013ijg,
+  title={bugs in IJG jpeg6b \& libjpeg-turbo},
+  year=2013,
+  author={Michal Zalewski},
+  howpublished={\url{https://seclists.org/fulldisclosure/2013/Nov/83}}
+}
+
+@misc{cunningham2014segv,
+  title={SEGV on specially crafted JPEG - 11f6acf7},
+  year=2014,
+  author={Jodie Cunningham},
+  howpublished={\url{https://github.com/mozilla/mozjpeg/issues/141}}
+}
+
+@misc{clusterfuzz2020heartbleed,
+  title={Finding Heartbleed},
+  howpublished={\url{https://google.github.io/clusterfuzz/setting-up-fuzzing/heartbleed-example/}}
+}
+
+@misc{heartbleed2020bug,
+  title={The Heartbleed Bug},
+  year=2020,
+  howpublished={\url{https://heartbleed.com/}}
+}
+
+@misc{syzkaller2020bugs,
+  title={Found bugs},
+  year=2020,
+  howpublished={\url{https://github.com/google/syzkaller/blob/master/docs/linux/found_bugs.md}}
+}
