--- a/literatura.bib
+++ b/literatura.bib
@@ -112,3 +112,28 @@
   year=2020,
   howpublished={\url{https://github.com/google/syzkaller/blob/master/docs/linux/found_bugs.md}}
 }
+
+@inproceedings{xu2017designing,
+  title={Designing new operating primitives to improve fuzzing performance},
+  author={Xu, Wen and Kashyap, Sanidhya and Min, Changwoo and Kim, Taesoo},
+  booktitle={Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+  pages={2313--2328},
+  year={2017}
+}
+
+@misc{clusterfuzz2020readme,
+  title={ClusterFuzz Trophies},
+  year=2020,
+  howpublished={\url{https://github.com/google/clusterfuzz}}
+}
+
+@misc{ossfuzz2020readme,
+  title={OSS-Fuzz},
+  howpublished={\url{https://github.com/google/oss-fuzz/}}
+}
+
+@misc{chang2017oss,
+  title={OSS-Fuzz: Five months later, and rewarding projects},
+  author={Chang, Oliver and Arya, A and Serebryany, K and Armour, J},
+  year={2017}
+}
