--- a/literatura.bib
+++ b/literatura.bib
@@ -135,5 +135,12 @@
 @misc{chang2017oss,
   title={OSS-Fuzz: Five months later, and rewarding projects},
   author={Chang, Oliver and Arya, A and Serebryany, K and Armour, J},
-  year={2017}
+  year={2017},
+  howpublished={\url{https://opensource.googleblog.com/2017/05/oss-fuzz-five-months-later-and.html}}
+}
+
+@misc{openapi2020main,
+  title={The OpenAPI Specification},
+  year=2020,
+  howpublished={\url{https://www.openapis.org/}}
 }
