--- a/1-what-is-fuzzing.tex
+++ b/1-what-is-fuzzing.tex
@@ -8,7 +8,7 @@ Integration testing on the other hand does not run small units. It combines all 
 
 One of most frequent bugs caught by fuzzers are buffer overflows, memory leaks and formatting errors. This sort of bugs may seem inocent and one might think that they will only crash the application. On the contrary, this bugs may leed to serious vulnerabilities such as heartbleed bug \cite{heartbleed2020bug} in widely used TLS implementation, which caused primary keys to leak and thus exposed the entire communication unencrypted. Additionally, there is an example implementation of how to find the heartbleed vulnerability right in the ClusterFuzz documentation \cite{clusterfuzz2020heartbleed}.
 
-\section{Why is fuzzing?}
+\section{Why is fuzzing}
 The above mentioned testing methods, however, proved insufficient when Miller with his team were able to crash from 24 to 33 percent of nearly 90 unix battle tested utilities. They were generating random inputs and reporting the error if program crashed or hanged. Miller described the fuzz testing strategy as a random walk through state space of a program, represented by a state machine, searching for undefined states \cite{miller1990empirical}.
 
 The success of random walk testing - fuzzing, did not ended there. Nevertheless, before we look into differrent successful fuzzers, let's categorize them. Categorization will allow us to describe them more precisely.
@@ -88,10 +88,10 @@ However, the global trend is to move away from GUI applications and offer all se
 
 To secure these online applications, we need to be able to fuzz the web services. Web services, nonetheless, are not as simple as a single application ot binary. They may consists of several other service in the backgroud. One of the prevalent wasy to organize web services is to use the microservice architecture. Let's look into it.
 
-\subsection{What are microservices?}
+\subsection{What are microservices}
 Microservice architecture is a way to organize multiple loosely couplet services. Those services are typically lightweight and try to follow the unix phylosophy of doing one thing and doung it well. What is more essential for us, is that they communicate mostly via technology-agnostic protocols. One of those protocols is HTTP. Moreover, the services often use RESTfull web APIs ontop of it. To help us model the APIs, OpenAPI specification can be used.
 
-\subsection{What is OpenAPI specification?}
+\subsection{What is OpenAPI specification}
 OpenAPI specification, previously known as Swagger, was standardized in 2016 and become over seen by the OpenAPI Initiative \cite{openapi2020main}. The specification describes an API in a machine-readable way (usually in JSON or YAML format). It defines differrent endpoints of the API along with the required and optional headers and response codes. Besides, it defines the payload fields, types and encodings. This gives us advantage of knowing the input structure, thus making it easier to make \emph{smart} fuzzer.
 
 \subsection{Why is a black-box fuzzing good fit for web services}
