--- a/literatura.bib
+++ b/literatura.bib
@@ -1,5 +1,5 @@
 @article{miller1990empirical,
-  title={An empirical study of the reliability of UNIX utilities},
+  title={{An empirical study of the reliability of UNIX utilities}},
   author={Miller, Barton P and Fredriksen, Louis and So, Bryan},
   journal={Communications of the ACM},
   volume={33},
@@ -10,29 +10,29 @@
 }
 
 @book{takanen2018fuzzing,
-  title={Fuzzing for software security testing and quality assurance},
+  title={{Fuzzing for software security testing and quality assurance}},
   author={Takanen, Ari and Demott, Jared D and Miller, Charles and Kettunen, Atte},
   year={2018},
   publisher={Artech House}
 }
 
 @article{neystadt2008automated,
-  title={Automated penetration testing with white-box fuzzing},
+  title={{Automated penetration testing with white-box fuzzing}},
   author={Neystadt, John},
   journal={MSDN Library},
   year={2008}
 }
 
 @inproceedings{miller2007analysis,
-  title={Analysis of mutation and generation-based fuzzing},
+  title={{Analysis of mutation and generation-based fuzzing}},
   author={Miller, Charlie and Peterson, Zachary NJ and others},
-  booktitle={Independent Security Evaluators, Tech. Rep},
+  booktitle={{Independent Security Evaluators, Tech. Rep}},
   volume={4},
   year={2007}
 }
 
 @misc{zalewski2018american,
-  title={american fuzzy lop (2.52 b)},
+  title={{american fuzzy lop (2.52 b)}},
   author={Zalewski, Michal},
   journal={9.1]. http://lcamtuf. coredump. cx/afl},
   year={2018},
@@ -40,28 +40,28 @@
 }
 
 @misc{zalewski2014uninitialized,
-  title={CVE-2014-1564: Uninitialized memory with truncated images in Firefox},
+  title={{CVE-2014-1564: Uninitialized memory with truncated images in Firefox}},
   year=2014,
   author={Zalewski, Michal},
   howpublished={\url{https://lcamtuf.blogspot.com/2014/09/cve-2014-1564-uninitialized-memory-when.html}}
 }
 
 @misc{zalewski2014two,
-  title={Two more browser memory disclosure bugs (CVE-2014-1580 and \#19611cz)},
+  title={{Two more browser memory disclosure bugs (CVE-2014-1580 and \#19611cz)}},
   year=2014,
   author={Zalewski, Michal},
   howpublished={\url{https://lcamtuf.blogspot.com/2014/10/two-more-browser-memory-disclosure-bugs.html}}
 }
 
 @misc{zalewski2015uninitialized,
-  title={Uninitialized memory use during bitmap rendering},
+  title={{Uninitialized memory use during bitmap rendering}},
   year=2015,
   author={Zalewski, Michal},
   howpublished={\url{https://www.mozilla.org/en-US/security/advisories/mfsa2015-02/}}
 }
 
 @misc{mozzilla2015update,
-  title={Update OpenH264 plugin to version 1.3},
+  title={{Update OpenH264 plugin to version 1.3}},
   year=2015,
   author={Mozilla and Cisco Developers, Nils, Hanno Bock},
   howpublished={\url{https://www.mozilla.org/en-US/security/advisories/mfsa2015-10/}}
@@ -69,78 +69,91 @@
 
 % TODO: correct Bock's name when we support unicode
 @misc{bock2015out,
-  title={Out of bounds read in OpenSSL function X509\_cmp\_time (CVE-2015-1789) and other minor issues},
+  title={{Out of bounds read in OpenSSL function X509\_cmp\_time (CVE-2015-1789) and other minor issues}},
   year=2015,
   author={Hanno Bock},
   howpublished={\url{https://blog.fuzzing-project.org/15-Out-of-bounds-read-in-OpenSSL-function-X509_cmp_time-CVE-2015-1789-and-other-minor-issues.html}}
 }
 
 @misc{sharma2014gnutls,
-  title={gnutls: Heap corruption when generating key ID for ECC (GNUTLS-SA-2014-5)},
+  title={{gnutls: Heap corruption when generating key ID for ECC (GNUTLS-SA-2014-5)}},
   year=2014,
   author={Siddharth Sharma},
   howpublished={\url{https://bugzilla.redhat.com/show_bug.cgi?id=1161443}}
 }
 
 @misc{zalewski2013ijg,
-  title={bugs in IJG jpeg6b \& libjpeg-turbo},
+  title={{bugs in IJG jpeg6b \& libjpeg-turbo}},
   year=2013,
   author={Michal Zalewski},
   howpublished={\url{https://seclists.org/fulldisclosure/2013/Nov/83}}
 }
 
 @misc{cunningham2014segv,
-  title={SEGV on specially crafted JPEG - 11f6acf7},
+  title={{SEGV on specially crafted JPEG - 11f6acf7}},
   year=2014,
   author={Jodie Cunningham},
   howpublished={\url{https://github.com/mozilla/mozjpeg/issues/141}}
 }
 
 @misc{clusterfuzz2020heartbleed,
-  title={Finding Heartbleed},
+  title={{Finding Heartbleed}},
   howpublished={\url{https://google.github.io/clusterfuzz/setting-up-fuzzing/heartbleed-example/}}
 }
 
 @misc{heartbleed2020bug,
-  title={The Heartbleed Bug},
+  title={{The Heartbleed Bug}},
   year=2020,
   howpublished={\url{https://heartbleed.com/}}
 }
 
 @misc{syzkaller2020bugs,
-  title={Found bugs},
+  title={{Found bugs}},
   year=2020,
   howpublished={\url{https://github.com/google/syzkaller/blob/master/docs/linux/found_bugs.md}}
 }
 
 @inproceedings{xu2017designing,
-  title={Designing new operating primitives to improve fuzzing performance},
+  title={{Designing new operating primitives to improve fuzzing performance}},
   author={Xu, Wen and Kashyap, Sanidhya and Min, Changwoo and Kim, Taesoo},
-  booktitle={Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+  booktitle={{Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security}},
   pages={2313--2328},
   year={2017}
 }
 
 @misc{clusterfuzz2020readme,
-  title={ClusterFuzz Trophies},
+  title={{ClusterFuzz Trophies}},
   year=2020,
   howpublished={\url{https://github.com/google/clusterfuzz}}
 }
 
 @misc{ossfuzz2020readme,
-  title={OSS-Fuzz},
+  title={{OSS-Fuzz}},
   howpublished={\url{https://github.com/google/oss-fuzz/}}
 }
 
 @misc{chang2017oss,
-  title={OSS-Fuzz: Five months later, and rewarding projects},
+  title={{OSS-Fuzz: Five months later, and rewarding projects}},
   author={Chang, Oliver and Arya, A and Serebryany, K and Armour, J},
   year={2017},
   howpublished={\url{https://opensource.googleblog.com/2017/05/oss-fuzz-five-months-later-and.html}}
 }
 
 @misc{openapi2020main,
-  title={The OpenAPI Specification},
+  title={{The OpenAPI Specification}},
   year=2020,
   howpublished={\url{https://www.openapis.org/}}
+}
+
+@book{nadareishvili2016microservice,
+  title={Microservice architecture: aligning principles, practices, and culture},
+  author={Nadareishvili, Irakli and Mitra, Ronnie and McLarty, Matt and Amundsen, Mike},
+  year={2016},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@mics{afl2019docs,
+  title={{More about AFL}},
+  year={2019},
+  howpublished={\url{https://afl-1.readthedocs.io/en/latest/about_afl.html}}
 }
